init for parquet 1.7 on cdh5